<resources>
    <string name="app_name">scbguide</string>

    <string name="update">Обновить</string>

    <!--  Alert  -->
    <string name="alert_warning">Предупреждение</string>
    <string name="alert_message">Вы уверены что хотите сделать это?</string>
    <string name="alert_cancel">Отмена</string>
    <string name="alert_accept">Продолжить</string>
    <!--  /Alert  -->

    <!--  BottomNavMenu  -->
    <string name="bnm_home">Главная</string>
    <string name="bnm_test">Испытания</string>
    <string name="bnm_favorite">Избранное</string>
    <string name="bnm_profile">Профиль</string>
    <!--  /BottomNavMenu  -->

    <!--  Profile  -->
    <string name="profile_title">Профиль</string>
    <!--  /Profile  -->

    <!--  MainContent  -->
    <string name="main_title">Добро пожаловать в справочник!</string>
    <string name="main_sub_title"><b>+150</b> устройств</string>
    <string name="main_item_board_title">Совет по изучению устройств</string>
    <string name="main_item_board_description">По очередности изучай все темы. Когда все темы будут изучены проверь свои знания на тестах, повышай уровень сложности по мере исчезновения ошибок!</string>
    <string name="main_item_lecture">Лекторий</string>
    <string name="main_item_my_lecture_hall">Мой лекторий</string>
    <string name="main_item_community">Сообщество</string>

    <string-array name="themes_declension">
        <item>тема</item>
        <item>темы</item>
        <item>тем</item>
    </string-array>
    <!--  /MainContent  -->

    <!--  Quiz  -->
    <string name="quiz_title">Испытания</string>
    <string name="quiz_sub_title">Испытания СЦБ-иста</string>
    <!--  /Quiz  -->

    <!--  Login  -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_enter">Войти</string>
    <string name="login_recovery"><u>Забыли пароль?</u></string>
    <string name="login_register">Зарегистрироваться</string>
    <!--  /Login  -->

    <!--  Register  -->
    <string name="register_title">Регистрация</string>
    <string name="register_name_hint">Имя</string>
    <string name="register_email_hint">Почта</string>
    <string name="register_password_hint">Пароль</string>
    <string name="register_repeat_password_hint">Повторить пароль</string>
    <string name="register_about_me">Обо мне</string>
    <string name="register_send">Регистрация</string>
    <string name="register_success">Регистрация прошла успешно!</string>
    <string name="register_login">Уже есть аккаунт? <u>Войти!</u></string>
    <string name="register_email_balloon">Почта должна быть настоящей, иначе вы не сможете восстановить свои данные!</string>
    <string name="register_parity_password_error">Пароли не равны!</string>
    <!--  /Register  -->

    <!--  ServiceRecover  -->
    <string name="recover_service_title">Восстановление</string>
    <!--  /ServiceRecover  -->

    <!--  Recover  -->
    <string name="recover_title">Введите почту. На вашу почту будет отправлен четырехзначный код!</string>
    <string name="recover_email_hint">Email</string>
    <string name="recover_send">Отправить</string>
    <string name="recover_new_code_time">Получить новый код через %s</string>
    <string name="recover_new_code">Получить новый код</string>
    <!--  /Recover  -->

    <!--  Code  -->
    <string name="code_title">Введите код отправленный на почту %s</string>
    <string name="code_send">Отправить</string>
    <!--  /Code  -->

    <!--  Password  -->
    <string name="password_title">Введите новый пароль и повторите его</string>
    <string name="password_new_hint">Новый пароль</string>
    <string name="password_new_repeat_hint">Повторите пароль</string>
    <string name="password_btn">Отправить</string>
    <string name="password_success">Смена пароля прошла успешно!</string>
    <!--  /Password  -->
</resources>