<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContentCode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/system_background"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTitleCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/code_title"
        android:textAlignment="center"
        android:textColor="@color/system_neutral_01"
        android:textSize="16sp" />

    <include
        android:id="@+id/incCode"
        layout="@layout/view_custom_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTimerCode"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        app:rippleColor="@color/system_blue_02"
        tools:text="@string/recover_new_code_time" />

    <com.spravochnic.scbguide.utils.view.CustomButtonView
        android:id="@+id/btnCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/code_send" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="20dp" />

</LinearLayout>
