<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablRegister"
        style="@style/DefaultAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbRegister"
            style="@style/DefaultToolbarWithArrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/register_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sivAvatarRegister"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="3dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:srcCompat="@drawable/ic_camera"
                app:strokeColor="@color/system_blue_01"
                app:strokeWidth="3dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="custom"
                app:endIconTint="@color/system_blue_01">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNameRegister"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconDrawable="@drawable/ic_question_mark"
                app:endIconMode="custom"
                app:endIconTint="@color/system_blue_01">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmailRegister"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/system_blue_02">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPasswordRegister"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRepeatPasswordRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/system_blue_02">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRepeatPasswordRegister"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_repeat_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAboutMeRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintEnabled="false"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAboutMeRegister"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/register_about_me"
                    android:inputType="textMultiLine"
                    android:minLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.spravochnic.scbguide.utils.view.CustomButtonView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_send"
                app:buttonType="blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginRegister"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:paddingVertical="5dp"
                android:text="@string/register_login" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>